<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/activityBack"
    android:orientation="vertical"
    android:scrollbarAlwaysDrawVerticalTrack="true">

    <TextView
        android:id="@+id/login_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginTop="22dp"
        android:gravity="center_horizontal"
        android:text="@string/login"
        android:textColor="@color/textColorBlack"
        android:textSize="26sp" />

    <RelativeLayout
        android:id="@+id/layout_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login_title"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="50dp"
        android:background="@color/white"
        android:elevation="5dp"
        android:orientation="vertical"
        android:padding="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="30dp">


            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/maxMargin"
                app:cardBackgroundColor="@color/editTextCard"
                app:cardElevation="5dp">


                <EditText
                    android:id="@+id/edt_emailid"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/editText"
                    android:layout_margin="@dimen/minMargin"
                    android:background="@color/editTextCard"
                    android:drawableLeft="@drawable/ic_mail"
                    android:drawablePadding="@dimen/drawablePadding"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:textColor="@color/editTextColor"
                    android:textColorHint="@color/lightGray"
                    android:textSize="@dimen/titleText" />

            </android.support.v7.widget.CardView>


            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/maxMargin"
                app:cardBackgroundColor="@color/editTextCard"
                app:cardElevation="5dp">


                <EditText
                    android:id="@+id/edt_password"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/editText"
                    android:layout_margin="@dimen/minMargin"
                    android:background="@color/editTextCard"
                    android:drawableLeft="@drawable/ic_locked"
                    android:drawablePadding="@dimen/drawablePadding"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:textColor="@color/editTextColor"
                    android:textColorHint="@color/lightGray"
                    android:textSize="@dimen/titleText" />

            </android.support.v7.widget.CardView>


            <android.support.v7.widget.CardView
                android:layout_width="120dp"
                android:layout_height="@dimen/cardHeight"
                android:layout_gravity="center"
                android:layout_marginBottom="@dimen/minMargin"
                android:layout_marginLeft="35dp"
                android:layout_marginRight="35dp"
                android:layout_marginTop="@dimen/maxMargin"
                app:cardBackgroundColor="@color/colorPrimary"
                app:cardElevation="5dp">


                <Button
                    android:id="@+id/btn_login"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/colorPrimary"
                    android:text="@string/login"
                    android:textAllCaps="false"
                    android:textColor="#fff"
                    android:textSize="18sp" />

            </android.support.v7.widget.CardView>




            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/minMargin"
                android:layout_marginRight="@dimen/minMargin"
                android:layout_marginTop="@dimen/maxMargin"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/txt_register"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="@string/register"
                    android:textColor="@color/textColorBlack"
                    android:textSize="@dimen/textNormal" />


            </LinearLayout>


        </LinearLayout>
    </RelativeLayout>

    <ImageButton
        android:id="@+id/user_profile_photo"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_below="@+id/login_title"
        android:layout_centerHorizontal="true"
        android:background="@drawable/user_profile_image_background"
        android:elevation="5dp"
        android:src="@drawable/userfilled" />




</RelativeLayout>